@@ -15,18 +15,12 @@ import org.bukkit.Material;
 import java.util.ArrayList;
 import java.util.List;
 
-
 public class Category {
 
-
     private String identifier;
-
     private String displayName;
-
     private String formattedDisplayName;
-
     private Material material;
-
     private List<Item> items = new ArrayList<>();
 
     public Category(String identifier) {
@@ -49,56 +43,73 @@ public class Category {
         this.material = Config.getInstance().getMaterialOfCategory(this);
     }
 
-    public void addItem(Item item) { items.add(item); }
+    public void addItem(Item item) {
+        items.add(item);
+    }
 
-    public void removeItem(Item item) { items.remove(item); }
+    public void removeItem(Item item) {
+        items.remove(item);
+    }
 
-    //
+    public void setDisplayName(String displayName) {
+        this.displayName = displayName;
+    }
 
-    public void setDisplayName(String displayName) { this.displayName = displayName; }
+    public void setDisplayMaterial(Material material) {
+        this.material = material;
+    }
 
-    public void setDisplayMaterial(Material material) { this.material = material; }
+    public int getNumberOfItems() {
+        return items.size();
+    }
 
-    //
+    public Item getItemOfIndex(int index) {
+        return items.get(index);
+    }
 
-    public int getNumberOfItems() { return items.size(); }
+    public String getIdentifier() {
+        return identifier;
+    }
 
-    public Item getItemOfIndex(int index) { return items.get(index); }
+    public String getDisplayName() {
+        return displayName;
+    }
 
-    public String getIdentifier() { return identifier; }
+    public String getFormattedDisplayName() {
+        return formattedDisplayName;
+    }
 
-    public String getDisplayName() { return displayName; }
+    public Material getMaterial() {
+        return material;
+    }
 
-    public String getFormattedDisplayName() { return formattedDisplayName; }
-
-    public Material getMaterial() { return material; }
-
-    public List<Item> getItems() { return items; }
+    public List<Item> getItems() {
+        return items;
+    }
 
     public List<String> getItemsIdentifiers() {
-
         List<String> itemsIdentifiers = new ArrayList<>();
-
         for (Item item : items)
             itemsIdentifiers.add(item.getIdentifier());
-
         return itemsIdentifiers;
     }
 
-    public void setItems(List<Item> items) { this.items = items; }
+    public void setItems(List<Item> items) {
+        this.items = items;
+    }
 
     public double getDayChange() {
-
         double changes = 0;
 
         for (Item item : items) {
-
-            Instant firstInstant = DatabaseManager.get().getDatabase().getDayPrices(item).getFirst();
-
-            if (firstInstant.getPrice() != 0 )
-                changes += ((item.getPrice().getValue() - firstInstant.getPrice()) / firstInstant.getPrice());
+            List<Instant> dayPrices = DatabaseManager.get().getDatabase().getDayPrices(item);
+            if (!dayPrices.isEmpty()) {
+                Instant firstInstant = dayPrices.get(0);
+                if (firstInstant.getPrice() != 0) {
+                    changes += ((item.getPrice().getValue() - firstInstant.getPrice()) / firstInstant.getPrice());
+                }
+            }
         }
-        return changes/items.size();
+        return items.isEmpty() ? 0 : changes / items.size();
     }
-
 }
